# rcli

./: Cargo.toml
examples/: struct.rs
src/: main.rs
