[package]
name = "cli-test"
version = "0.1.0"
authors = ["David Rivas <david@momentlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linefeed = "0.6"
config = "0.10"
clap = "2.33"
chrono = "0.4"
attohttpc = "0.11"

